--- a/index.html
+++ b/index.html
@@ -177,6 +177,18 @@
 
   window.addEventListener('load', requestNukeNotification);
 </script>
+<h2>Play the National Anthem</h2>
+<p>Experience the patriotic spirit by listening to the national anthem:</p>
+<!-- Embedded YouTube Player -->
+<div style="position: relative; width: 100%; max-width: 560px; margin: auto;">
+  <iframe id="anthemPlayer" width="560" height="315"
+    src="https://www.youtube.com/embed/LbPVSOSBfvQ?autoplay=1&loop=1&playlist=LbPVSOSBfvQ"
+    title="North Korean National Anthem"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
 
 </body>
 </html>
